<resources>
    <string name="app_name">EasyTrip</string>
    <string name="title_home">首页</string>
    <string name="title_community">社区</string>
    <string name="title_tools">小工具</string>
    <string name="title_myinfo">我</string>
    <string name="title_blank">  </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main">EasyTrip</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_article">编写文章</string>

    <!-- Strings related to login -->
    <string name="prompt_userName">用户名</string>
    <string name="prompt_userPswd">密码</string>
    <string name="prompt_account">登录账号</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="error_invalid_account">用户名不正确！</string>
    <string name="error_invalid_password">密码太短啦！请输入至少6位的密码</string>
    <string name="error_incorrect_password">密码不正确！</string>
    <string name="error_field_required">必须填写该项！</string>
    <string name="psdChange">请输入密码：\n</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_register">注册</string>
    <string name="server_url">http://223.3.77.187:8080/EasyTrip</string>

    <string name="aboutinfo">Copyright © 2017\nTeam RUA of SEU COSE\nAll Rights Reserved.\n\n欢迎使用EasyTrip！\n这是RUA团队的第一个作品，希望大家喜欢！RUA！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="api_key">b5yt3CpGf37PdX4wTynwPx2nzNA1OZgg</string>

    <string-array name="tab_short_Title">
        <item>天气</item>
        <item>地图</item>
        <item>步数</item>
    </string-array>

</resources>
